# test_tasks

./: pyproject.toml
src/: task1.py  task2.py  task3.py
src/task3_class/: operation.py
